fix meta alignment

--- a/src/index.css
+++ b/src/index.css
@@ -98,6 +98,7 @@ main > *:not(.lightbox-wrapper) {
 
 .album-meta {
   margin: 5px 0 0 10px;
+  width: 100%;
 }
 
 .album-meta p {
